--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -5,11 +5,27 @@ header {
     height: auto;
     min-height: 70px;
     z-index: 1;
+    background-color: #0c0c0c;
     background-image: linear-gradient(180deg,rgba(0,0,0,.7) 10%,transparent);
+}
+.link {
+    display: block;
+    color: #e5e5e5;
+    font-family:  Sans, Helvetica, Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    transition: 1s opacity ease;
+}
+ul.navigation_tab li .link:hover {
+    opacity: 0.7;
+}
+.activeLink {
+    display: block;
+    font-weight: 500;
+    color: #e5e5e5;
+    font-family:  Sans, Helvetica, Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
 }
 .header_container {
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -31,10 +47,14 @@ header {
     width: 50%;
 }
 .header_right_side {
+    margin: 20px;
     width: 40%;
     display: flex;
     justify-content: end;
 }
 .logo {
     display: block;
+}
+.logo:hover {
+    transform: scale(0.5)
 }
